# SolvingQAPWithEvolution

./: .gitignore  README.md  generate_plots.py  pyproject.toml  test.py
.github/workflows/: tests.yml
best_result/: 2025_01_21T10_04_49_standard.txt  best_result.txt
src/: benchmark.py  chromosome.py  config.py  fitness_function.py  greedy_optimizations.py  main.py  mutation.py  population.py  read_data.py  recombine.py  selection.py  serialization.py  z_fitness_function_old.py  z_population_old.py  z_recombine_old.py  z_selection_old.py
src/evolutionary_tools/: chromosome.py  fitness_function.py  greedy_optimizations.py  mutation.py  recombine.py  selection.py
src/tests/: test_fitness_function.py  test_greedy_optimization.py  test_recombine.py  test_selection.py
